# -blender-codex-

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AUTOCAD_MCP_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_DRAFT.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
cad-mcp-autocad/: LICENSE  README.md  README_en.md  README_zh.md  requirements.txt
docs/: 01-codex-cad.md  02-codex-comfyui.md  03-codex-photoshop.md  04-codex-blender.md  05-codex-illustrator.md  06-codex-jianying.md  07-codex-computer-use.md  CAPABILITY_MATRIX.md  RELEASE_V0_1_ALPHA.md  adobe-demo-gallery.md  adobe-demo-smoke-test.md  advanced-project-comparison.md  autocad-dxf-bridge-mvp.md  cad-dxf-demo-scenarios.md  client-compatibility.md  codex-drawing-tool-integrations.md  codex-usage-prompts.md  comfyui-agent-workflow-protocol.md  computer-use-vs-mcp.md  demo-illustrator.md  demo-photoshop.md  github-comparison.md  github-visibility.md  local-mcp-setup.md  optimization-report.md  photoshop-codex-bridge.md  probe-spec.md  starbridge-link-protocol.md  starbridge-maintenance-closeout-2026-05-31.md  starbridge-tool-roadmap.md  starbridge.md  third-party-adoption-plan.md  windows-dev-env-bootstrap-2026-05-31.md  windows-install.md  中文介绍.md  中文标注规范.md  中文用途索引.md
examples/: bridge_capabilities.json  bridge_status.py
scripts/: analyze_blender_learning_assets.py  blender_scene_profile.py  bridge_capability_matrix.py  check_cad_dxf_env.ps1  collect_bridge_status.py  draw_connection_plate_from_spec.py  draw_girl_holding_rose.py  (+7 more)
(+186 files in other folders)
